株価取得時に投資指標を算出するようにした